WIP - Run MapTool with OpenJDK 11 + OpenJFX
 * gradle run now launches working Hello World!